# sentiment-analyzer-pro

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.enhanced  .ruff.toml  .secrets.baseline  =2.10.1  =25.0  =42.0.5  =45.0.5  =78.1.1  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_v5.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.json  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_QNP_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_SUCCESS_SUMMARY.json  AUTONOMOUS_SDLC_SUCCESS_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.dev  Dockerfile.production  FINAL_IMPLEMENTATION_GUIDE.md  GLOBAL_IMPLEMENTATION.md  (+90 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  feature_request.md  feature_request.yml  performance_regression.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: pypi-publish.yml  python-ci.yml
.terragon/: README.md  autonomous-scheduler.py  discovery-engine.py  simple-discovery.py  value-config.yaml  value-metrics.json
cost-optimization/: README.md
data/: sample_reviews.csv
deployments/: DEPLOYMENT_GUIDE.md  deployment_summary.json
deployments/configs/: alert_rules.yml  deployment.yaml  hpa.yaml  prometheus.yml  security.yaml  service.yaml
deployments/manifests/: deployment.yaml  hpa.yaml  service.yaml
deployments/monitoring/: dashboard.json  servicemonitor.yaml
deployments/scripts/: build.sh  deploy.sh  smoke_tests.sh
docker/: Dockerfile.production  config.production.json  gunicorn.conf.py
docs/: API_REFERENCE.md  ARCHITECTURE_DECISION_RECORD_TEMPLATE.md  ASPECT_SENTIMENT.md  COMPLIANCE.md  DATA_HANDLING.md  DEPLOYMENT.md  DEPLOYMENT_AUTONOMOUS.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  DISASTER_RECOVERY_ENHANCED.md  EVALUATION.md  GETTING_STARTED.md  MODEL_RESULTS.md  PERFORMANCE_MONITORING.md  PERFORMANCE_OPTIMIZATION.md  QNP_RESEARCH_PAPER.md  QUANTUM_RESEARCH_PAPER.md  ROADMAP.md  SECURITY.md  SETUP_REQUIRED.md  SUPPLY_CHAIN_SECURITY.md  WORKFLOW_SETUP_MANUAL.md  WORKFLOW_SETUP_REQUIRED.md
docs/adr/: 000-adr-template.md  001-architecture-decision-records.md  001-project-architecture.md  001-transformer-architecture-choice.md  002-python-ml-stack.md
docs/deployment/: README.md
docs/runbooks/: incident-response.md
docs/status/: autonomous-final-report-2025-07-25.json  autonomous-session-2025-01-24.md  (+4 more)
docs/testing/: README.md
examples/: neuromorphic_example.py  photonic_synthesis_examples.py  qnp_breakthrough_demo.py  quantum_photonic_fusion_demo.py  quantum_sentiment_demo.py  transformer_example.py
k8s/: deployment.yaml
kubernetes/: deployment.yaml
monitoring/: README.md  alert_rules.yml  otel-collector.yml  prometheus.yml
nginx/: nginx.conf
observability/: health_checks.py  structured_logging.py  tracing.py
production_deployment/: Dockerfile  deploy.sh  docker-compose.yml  k8s-deployment.yaml  nginx.conf
profiling/: README.md  benchmark_config.py
quality_gates_results/: quality_report_fcc336a8.json  quality_report_fcc336a8.md
research_results/: quantum_photonic_experiment_e2a9f50a.json  research_report_e2a9f50a.md
scripts/: build.sh  dependency-update.sh  deploy-autonomous.sh  deploy-k8s.sh  deploy-production.sh  deploy.sh  quality-check.sh  repo-maintenance.sh  update_security_dependencies.py
src/: __init__.py  adaptive_agi_engine.py  adaptive_learning_engine.py  advanced_caching.py  advanced_deployment_orchestrator.py  advanced_error_handling.py  advanced_research_framework.py  advanced_validation_engine.py  aspect_sentiment.py  auto_scaling.py  auto_scaling_advanced.py  autonomous_agentic_sentiment_framework.py  autonomous_evolution_engine.py  autonomous_production_deployment.py  autonomous_research_benchmarking_suite.py  autonomous_research_master_system.py  autonomous_research_validation_system.py  autonomous_sdlc_completion_system.py  basic_autonomous_executor.py  cli.py  compliance.py  compliance_manager.py  comprehensive_monitoring_suite.py  comprehensive_quality_gates.py  config.py  core_api.py  dashboard.py  data_validation.py  enhanced_config.py  enterprise_security_framework.py  evaluate.py  health_check.py  health_monitoring.py  high_performance_optimization_engine.py  hybrid_qnp_architecture.py  i18n.py  i18n_manager.py  intelligent_error_recovery.py  intelligent_error_recovery_v2.py  logging_config.py  (+66 more)
tests/: conftest.py  load_test.py  sprint_acceptance_criteria.json  test_advanced_features.py  test_agi_integration.py  test_aspect_sentiment.py  test_auto_scaling.py  test_autonomous_sdlc.py  test_batch_prediction.py  test_cli.py  test_comprehensive_model_comparison.py  test_config.py  test_cross_validation.py  test_documentation.py  test_enhanced_logging.py  test_evaluate.py  test_hybrid_qnp_architecture.py  test_logging.py  test_makefile.py  test_metrics.py  test_model_comparison.py  test_model_comparison_transformer.py  test_models.py  test_nb_model.py  test_neuromorphic_spikeformer.py  test_photonic_basic.py  test_photonic_isolated.py  test_photonic_mlir_bridge.py  test_precommit_security.py  test_predict.py  test_predict_coverage.py  test_preprocessing.py  test_profiling.py  test_quantum_benchmarking.py  test_quantum_inspired_sentiment.py  test_schemas.py  test_security.py  test_security_dependencies.py  test_train.py  test_transformer_trainer.py  (+1 more)
(+26 files in other folders)
