[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment_analyzer_pro"
version = "0.1.0"
description = "Advanced sentiment analysis toolkit"
authors = [{name = "Jules"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "nltk",
    "joblib",
    "pydantic>=1.10",
    "cryptography>=42.0.5",
    "pyjwt>=2.10.1",
    "psutil",
]

[project.optional-dependencies]
ml = [
    "tensorflow",
    "transformers", 
    "torch",
]
web = [
    "flask",
]
dev = [
    "pytest",
    "pytest-cov",
    "flask",
    "black",
    "isort",
    "ruff",
    "mypy",
    "pre-commit",
    "bandit",
    "safety",
]

[project.scripts]
sentiment-cli = "src.cli:main"
sentiment-web = "src.webapp:main"

[project.urls]
Homepage = "https://github.com/username/sentiment-analyzer-pro"
Documentation = "https://github.com/username/sentiment-analyzer-pro/blob/main/README.md"
Repository = "https://github.com/username/sentiment-analyzer-pro"
Issues = "https://github.com/username/sentiment-analyzer-pro/issues"
Changelog = "https://github.com/username/sentiment-analyzer-pro/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sentiment_analyzer_pro"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--disable-warnings",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011", "B018"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "sentiment_analyzer_pro"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
